--- a/teilnehmer/.jsbeautifyrc
+++ b/teilnehmer/.jsbeautifyrc
@@ -6,7 +6,7 @@
     "indent_size": 2,
     "max_preserve_newlines": 1,
     "preserve_newlines": true,
-    "unformatted": ["a", "sub", "sup", "b", "i", "u"],
+    "unformatted": ["a", "sub", "sup", "b", "i", "u", "span"],
     "wrap_line_length": 60
   },
   "css": {
